--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,1 @@
-.share-note-status-error.notice {
-    background: #c10000;
-    color: white
-}
-
-.share-note-status-info.notice {
-    background: hsl(204, 86%, 53%);
-    color: white
-}
-
-.share-note-status-success.notice {
-    background: #629762;
-    color: white
-}
-
-.share-note-icons {
-    display: flex;
-}
-
-.share-note-icons > span {
-    display: flex;
-    margin-left: 6px;
-    cursor: pointer;
-}
+create note to showcase featues: browers, calendars, plugins, RTL, tables, admonition, text highilhgiutng, zen writer, google-like keyword search, front matter, sharenote plugins, samba shares, alt+o to minize, recent files, status bar items like max word count, completer, show css, show graph connections with exmaple vault, show task management with kanban, show how its just plain markdown files and we can create a share ofr it., show them the plugin i created, Kubernets api groups note, typewriter plugin, talk about it being a second brain, show paste image into url, show results from google search of "obsidian example vaults graph view" and how people came up with their own encycliopioda, say ai is great and all but when you need to face a problem no one faced before, it cant really help you. and when you need to face it again, you better have that note ready. tell them to ask orel for a licesnse if they think at least one of the feeatues i showed them today is cool. showcase the plugins i built. epxlina you can download all things from the web, say I requetes for shared storage vault everyone with his own vault + shared vault
